# Smart-India-Hackathon

./: .replit  citizen_cookies.txt  cookies.txt  db.sqlite3  manage.py  pyproject.toml  replit.md
civic_reports/: asgi.py  settings.py  urls.py  wsgi.py
reports/: frontend_urls.py  frontend_views.py  models.py  permissions.py  serializers.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_alter_report_latitude_alter_report_longitude.py  0003_alter_report_latitude_alter_report_longitude.py  0004_alter_report_latitude_alter_report_longitude.py
static/css/: main.css
static/js/: auth.js  citizen-dashboard.js  main.js
templates/: base.html
templates/admin/: analytics.html  dashboard.html  map.html  reports.html
templates/auth/: login.html  register.html
templates/citizen/: dashboard.html  submit_report.html
